--- a/test/Makefile
+++ b/test/Makefile
@@ -2,5 +2,6 @@ test:
 	node ../bin/stcr case
 	node ../bin/stcr case.exec
 	node ../bin/stcr case.before-after
+	node ../bin/stcr case.commands
 
 .PHONY : test
