exec can send Error object to callback. Fix unfinished async test

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,6 +4,7 @@ test:
 	node ../bin/tc case.before-after
 	node ../bin/tc case.commands
 	node ../bin/tc case.async
+	node ../bin/tc case.async-fail
 	node ../bin/tc case.require
 
 .PHONY : test
