fx bug: twice OK report for async tests

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "0.3.0",
   "dependencies": {},
   "devDependencies": {
-    "abc": "0.3.x"
+    "abc": "0.3.1"
   },
   "optionalDependencies": {},
   "engines": {
