--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "url": "http://github.com/gregof"
   },
   "description": "Simple test case runner",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "dependencies": {},
   "devDependencies": {
-    "abc": "0.3.1"
+    "abc": "0.3.x"
   },
   "optionalDependencies": {},
   "engines": {
